Bye bye toggle_inverse.gif... made a "super" toggle.gif which contains both states and "switched" using CSS sprites method to stop the ugly loading "flash" when images aren't cached for the first time. prosilver ACP+style classnames use hyphens... so stuck with them, plus underscores might trip up some bizarre edge case thing with IE6, so play safe. Would like the toggle to set a cookie at some point, so the setting would be "sticky".
git-svn-id: file:///svn/phpbb/trunk@7222 89ea8834-ac86-4346-8a33-228a782c2dd0

--- a/phpBB/adm/style/admin.css
+++ b/phpBB/adm/style/admin.css
@@ -353,7 +353,7 @@ span.corners-bottom span {
 	margin-left: 2px;
 }
 
-#toggle_handle {
+#toggle-handle {
 	display: block;
 	width: 18px;
 	height: 19px;
